@@ -29,4 +29,4 @@ requires:
   perl: 5.005
 resources:
   license: http://dev.perl.org/licenses/
-version: 3.001
+version: 3.002
