@@ -1,3 +1,7 @@
+2008-11-10  Kingpin  <Martin@BLUEMAX>
+
+	* lib/WWW/Search/Ebay.pm (_parse_tree): fixed patterns for detecting spell-checked query
+
 2008-11-09  Kingpin  <Martin@BLUEMAX>
 
 	* lib/WWW/Search/Ebay.pm (_parse_tree): fixed "infinite" looping of page requests
